--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -8,13 +8,12 @@
 .employee_main_view{
     display: flex;
     flex-direction: row;
-    border: solid 1px black;
+    background-color: #FEFEFE;
     width: 100%;
 
     .left_container{
         min-height: 300px;
         flex-grow: 1;
-        border-right: solid 1px grey;
     }
     
     .right_container{
@@ -31,15 +30,57 @@
         border-collapse: collapse;
         width: 100%;
         margin-top: 10px;
-        td, th {
-            border: 1px solid #dddddd;
+        th {
+            color: #555555;
             text-align: left;
             padding: 8px;
+            border-bottom: 1px solid #dddddd;
+            border-top: 1px solid #dddddd;
+            background-color: #FAFBFD;
+            padding-top: 15px;
+            padding-bottom: 15px;
         }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
+        .hide{
+            display: none;
         }
+        td {
+            text-align: left;
+            padding: 8px;
+            .info_basic_container{
+                display: flex;
+                flex-direction: column;
+                
+            }
+            &.employee_row_infoBasic {
+                width: 20%;
+            }
+            &.employee_row_type {
+                width: 10%;
+            }
+            &.employee_row_gender{
+                width: 10%;
+            }
+            &.employee_row_phone {
+                width: 10%;
+            }
+            &.employee_row_address {
+                width: 30%;
+            }
+            &.employee_row_status {
+                width: 10%;
+                .employee_status_doing{
+                    background-color: #0D6EFD !important;
+                }
+                .employee_status_off {
+                    background-color: #DC3545 !important;
+                }
+            }
+        }
+        tr {
+            border-bottom: 1px solid #dddddd;
+            width: 100%;
+        }
+        
         tr:hover {
             background-color: #A5B8EA;
             cursor: pointer;
@@ -48,13 +89,25 @@
             background-color: #7895E0;
             cursor: pointer;
         }
+        tr.hide_row{
+            display: none;
+        }
+         
     }
     
-
-    .functionalities_choised {
+    #employee_row_empty{
         display: flex;
-        flex-direction: row;
-        margin-bottom: 10px;
+        padding-top: 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        i{
+            font-size: 1.5rem;
+            color: #FFBD4A;
+        }
+        &.hide_empty{
+            display: none;
+        }
     }
 
     .section_name{
@@ -111,12 +164,12 @@
         margin: 5px;
         width: calc(100% - 10px);
         padding: 8px 5px 8px 5px;
-        background-color: lightgray;
+        background-color: #FAFBFD;
+        border: solid 1px #07153A;
+        border-radius: 4px;
         outline: none;
-        border: solid 1px transparent;
         font-size: 0.9375rem;
         margin-bottom: 10px;
-        cursor: pointer;
     }
 
     .timkiem_container input:focus{
@@ -144,49 +197,58 @@
                 width: 100%;
                 max-width: 100%;
             }
+            table {
+                th {
+                    &.employee_row_title_infoBasic {
+                        width: 80%;
+                    }
+                    &.employee_row_title_type{
+                        display: none;
+                    }
+                    &.employee_row_title_gender{
+                        display: none;
+                    }
+                    &.employee_row_title_phone{
+                        display: none;
+                    }
+                    &.employee_row_title_address{
+                        display: none;
+                    }
+                    &.employee_row_title_status {
+                        width: 10%;
+                    }
+                }
+                td {
+                    &.employee_row_infoBasic {
+                        width: 80%;
+                    }
+                    &.employee_row_type {
+                        display: none;
+                    }
+                    &.employee_row_gender{
+                        display: none;
+                    }
+                    &.employee_row_phone {
+                        display: none;
+                    }
+                    &.employee_row_address {
+                        display: none;
+                    }
+                    &.employee_row_status {
+                        width: 10%;
+                        .employee_status_doing{
+                            background-color: #0D6EFD !important;
+                        }
+                        .employee_status_off {
+                            background-color: #DC3545 !important;
+                        }
+                    }
+                }
+                
+            }
     }
 }
 
-.label-status {
-	cursor: pointer;
-	text-indent: -9999px;
-	width: 200px*0.3;
-	height: 100px*0.3;
-	background: grey;
-	display: inline-block;
-	border-radius: 100px;
-	position: relative;
-}
-
-.label-status:after {
-	content: '';
-	position: absolute;
-	top: 5px*0.3;
-	left: 5px*0.3;
-	width: 90px*0.3;
-	height: 90px*0.3;
-	background: #fff;
-	border-radius: 90px;
-	transition: 0.3s;
-}
-
-
-.employee_status_checkbox{
-    display:none;
-}
-
-input:checked + .label-status {
-	background: #bada55;
-}
-
-input:checked + .label-status:after {
-	left: calc(100% - 5px*0.3);
-	transform: translateX(-100%);
-}
-
-.label-status:active:after {
-	width: 130px*0.3;
-}
 
 .show_container{
     .show_content{
@@ -197,35 +259,46 @@ input:checked + .label-status:after {
         max-width: 400px;
         text-align: left;
         .show_employee_name{
-            width: 40%;
+            width: 35%;
         }
         .show_roomtype_name{
             width: 50%;
         }
         .show_sign{
-            width: 10%;
+            width: 5%;
+        }
+        .show_roomtype_value{
+            width: 60%;
+        }
+        .show_employee_value{
+            width: 55%;
+            .employee_status_doing{
+                background-color: #0D6EFD !important;
+            }
+            .employee_status_off {
+                background-color: #DC3545 !important;
+            }
         }
         p {
-            font-size: 1.1rem !important;
+            font-size: 1.02rem !important;
         }
         margin-bottom: 50px;
     }
     width: 50%;
     padding: 50px;
     background-color: #ffffff;
-    border: 1px solid black;
     border-radius: 8px;
     @media only screen and (max-width: 1200px) {
         flex-direction: column-reverse;
             .show_content{
-                max-width: 250px;
+                max-width: 300px;
                 margin-bottom: 20px !important;
                 p {
                     font-size: 0.95rem !important;
                 }
             }
-        width: 80%;
-        padding: 30px;
+        width: 100%;
+        padding: 10px;
     }
             
 }
