--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,19 @@
-<h1>New Room</h1>
+<div class="employee_top_breadcrumb">
+<nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="d-flex justify-content-start">
+        <ol class="breadcrumb"> 
+          <li class="breadcrumb-item"><a href="#">Cấu hình</a></li>
+          <li class="breadcrumb-item"><a href="#">Phòng</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Thêm</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</nav>
+</div>
 
 <%= render 'form', room: @room %>
 
-<%= link_to 'Back', rooms_path %>
+<%= link_to rooms_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
