--- a/app/assets/stylesheets/room_prices.scss
+++ b/app/assets/stylesheets/room_prices.scss
@@ -1,3 +1,333 @@
 // Place all the styles related to the RoomPrices controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.top_breadcrumb{
+    font-weight: 700;
+    font-size: 0.9375rem;
+    
+}
+
+.roomPrice_main_view{
+    display: flex;
+    flex-direction: row;
+    background-color: #FEFEFE;
+    width: 100%;
+
+    .left_container{
+        min-height: 300px;
+        flex-grow: 1;
+    }
+    
+    .right_container{
+        width: 30%;
+        max-width: 360px;
+        
+        padding: 10px 0px 10px 0px;
+        width: calc(100% - 10px);
+        padding: 5px;
+    }
+
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        margin-top: 10px;
+
+        th {
+            color: #555555;
+            text-align: left;
+            padding: 8px;
+            border-bottom: 1px solid #dddddd;
+            border-top: 1px solid #dddddd;
+            background-color: #FAFBFD;
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+        .hide{
+            display: none;
+        }
+        td {
+            text-align: left;
+            padding: 8px;
+            .info_basic_container{
+                display: flex;
+                flex-direction: column;
+                
+            }
+            &.roomPrice_row_infoBasic {
+                width: 20%;
+            }
+            &.roomPrice_row_roomType {
+                width: 15%;
+            }
+            &.roomPrice_row_price{
+                width: 15%;
+            }
+            &.roomPrice_row_date {
+                width: 20%;
+            }
+            &.roomPrice_row_is_available {
+                width: 15%;
+                .roomPrice_status_doing{
+                    background-color: #0D6EFD !important;
+                }
+                .roomPrice_status_off {
+                    background-color: #DC3545 !important;
+                }
+            }
+        }
+        tr {
+            border-bottom: 1px solid #dddddd;
+            width: 100%;
+        }
+        tr:hover {
+            background-color: #A5B8EA;
+            cursor: pointer;
+        }
+        tr.row_selected{
+            background-color: #7895E0;
+            cursor: pointer;
+        }
+        tr.hide_row{
+            display: none;
+        }
+    }
+
+    #roomPrice_row_empty{
+        display: flex;
+        padding-top: 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        i{
+            font-size: 1.5rem;
+            color: #FFBD4A;
+        }
+        &.hide_empty{
+            display: none;
+        }
+    }
+
+    .section_name{
+        font-weight: 700;
+        font-size: 1rem;
+        margin-left: 5px;
+        color: #436BD5;
+    }
+
+    .functionalities{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 10px;
+    }
+
+    .functionality_add {
+        flex-grow: 1; 
+        padding: 10px;
+        margin: 5px;
+        border: solid 1px back;
+        text-align: center;
+        border-radius: 4px;
+    }
+    .functionality_item{
+        flex-grow: 1; 
+        padding: 10px;
+        margin: 5px;
+        border: solid 1px gray;
+        text-align: center;
+        border-radius: 4px;
+        color: gray;
+        background-color: #bfbfbf;
+    }
+    .button_selected {
+        flex-grow: 1; 
+        padding: 10px;
+        margin: 5px;
+        border: solid 1px black;
+        text-align: center;
+        border-radius: 4px;
+        &:hover {
+            background-color: #7895E0;
+            cursor: pointer;
+        }
+        color: black;
+    }
+
+    .timkiem_container{
+        width: 100%;
+    }
+
+    .timkiem_container input {
+        margin: 5px;
+        width: calc(100% - 10px);
+        padding: 8px 5px 8px 5px;
+        background-color: #FAFBFD;
+        border: solid 1px #07153A;
+        border-radius: 4px;
+        outline: none;
+        font-size: 0.9375rem;
+        margin-bottom: 10px;
+        cursor: pointer;
+    }
+
+    .timkiem_container input:focus{
+        background-color: inherit;
+        border: solid 1px #436BD5 !important;
+    }
+
+    .timkiem_price {
+        display: flex;
+        flex-direction: row;
+        input{
+            margin: 5px;
+            width: calc(30%);
+            padding: 4px 2px 4px 2px;
+            background-color: #FAFBFD;
+            border: solid 1px #07153A;
+            border-radius: 4px;
+            outline: none;
+            font-size: 0.9375rem;
+            margin-bottom: 10px;
+            &:focus{
+                background-color: inherit;
+                border: solid 1px #436BD5 !important;
+            }
+            
+        }
+    }
+    .btn_ApDung{
+        flex-grow: 1; 
+        padding: 2px;
+        margin: 6px;
+        border: solid 1px #436BD5;
+        text-align: center;
+        border-radius: 4px;
+        color: #ffffff;
+        background-color: #436BD5;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    .boloc_container{
+        margin-left: 5px;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        flex-direction: column-reverse;
+        .functionality_item{
+            max-width: 120px;
+        }
+        .left_container{
+            border-right: none;
+        }
+        .right_container{
+            width: 100%;
+            max-width: 100%;
+        }
+        table {
+            th {
+                &.roomPrice_row_title_roomType {
+                    width: 30%;
+                }
+                &.roomPrice_row_title_infoBasic{
+                    width: 40%;
+                }
+                &.roomPrice_row_title_price{
+                    width: 30%;
+                }
+                &.roomPrice_row_title_date{
+                    display: none;
+                }
+                &.roomPrice_row_title_is_available{
+                    display: none;
+                }
+            }
+            td {
+                &.roomPrice_row_infoBasic {
+                    width: 40%;
+                }
+                &.roomPrice_row_roomType {
+                    width: 30%;
+                }
+                &.roomPrice_row_price{
+                    width: 30%;
+                }
+                &.roomPrice_row_date {
+                    display: none;
+                }
+                &.roomPrice_row_is_available {
+                    display: none;
+                }
+            }
+            
+        }
+    }
+}
+.tColumn{
+    display: flex;
+    flex-direction: column;
+    
+}
+.tRow{
+    display: flex;
+    flex-direction: row;
+}
+
+.tBotton {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    @media only screen and (max-width: 1200px) {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+}
+
+.show_roomPrice_container{
+    .show_content{
+        width: 100%;
+        color: black;
+        & > div{
+            width: 100%;
+        }
+        max-width: 400px;
+        text-align: left;
+        .show_roomPrice_name{
+            width: 30%;
+        }
+        .show_sign{ 
+            width: 5%;
+        }
+        .show_roomPrice_value{
+            width: 65%;
+            .roomPrice_status_doing{
+                background-color: #0D6EFD !important;
+            }
+            .roomPrice_status_off {
+                background-color: #DC3545 !important;
+            }
+        }
+        p {
+            font-size: 1.02rem !important;
+        }
+        margin-bottom: 50px;
+    }
+    width: 50%;
+    padding: 30px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    @media only screen and (max-width: 1200px) {
+        flex-direction: column-reverse;
+            .show_content{
+                max-width: 300px;
+                margin-bottom: 20px !important;
+                p {
+                    font-size: 0.95rem !important;
+                }
+            }
+        width: 100%;
+        padding: 10px;
+    }
+            
+}
