--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,4 +1,3 @@
-<center>
 <div class="employee_top_breadcrumb">
     <nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <div class="row">
@@ -15,75 +14,176 @@
     </nav>
 </div>
 <p id="notice"><%= notice %></p>
-<div class="show_container">
+  <!-- <div class="row justify-content-center">
+    <div class="col-xl-5 row">
+        <p class="col-xl-5 col-sm-4 row">Tên nhân viên </p>
+        <div class="col-xl-7 col-sm-7 row form-group">
+          <%= @employee.name %>
+        </div>
+    </div>
+    <div class="col-xl-5 row">
+      <p class="col-xl-5 col-sm-4 row">Loại nhân viên </p>
+      <div class="col-xl-7 col-sm-7 row form-group">
+        <%= @employee.employee_type %>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+  <div class="col-xl-5 row">
+      <p class="col-xl-5 col-sm-4 row">CCCD</p>
+      <div class="col-xl-7 col-sm-7 row form-group">
+        <%= @employee.citizen_id %>
+      </div>
+    </div>
+    <div class="col-xl-5 row">
+        <p class="col-xl-5 col-sm-4 row">Số điện thoại</p>
+        <div class="col-xl-7 col-sm-7 row form-group">
+          <%= @employee.phone_number %>
+        </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-xl-5 row">
+        <p class="col-xl-5 col-sm-4 row">Địa chỉ</p>
+        <div class="col-xl-7 col-sm-7 row form-group">
+          <%= @employee.address %>
+        </div>
+    </div>
+    <div class="col-xl-5 row">
+      <p class="col-xl-5 col-sm-4 row">Quốc tịch</p>
+      <div class="col-xl-7 col-sm-7 row form-group">
+        <%= @employee.nationality %>
+      </div>
+  </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-xl-5 row">
+      <p class="col-xl-5 col-sm-4 row">Giới tính</p>
+      <div class="col-xl-7 col-sm-7 row form-group">
+        <%= @employee.gender %>
+      </div>
+    </div>
+    <div class="col-xl-5 row">
+        <p class="col-xl-5 col-sm-4 row">Ngày sinh</p>
+        <div class="col-xl-7 col-sm-7 row form-group">
+          <%= Date.parse(@employee.date_of_birth.to_s) %>
+        </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-xl-5 row">
+      <p class="col-xl-5 col-sm-4 row">Email</p>
+      <div class="col-xl-7 col-sm-7 row form-group">
+        <%= @employee.email %>
+      </div>
+    </div>
+    <div class="col-xl-5 row">
+      <p class="col-xl-5 col-sm-4 row">Trạng thái</p>
+      <div class="col-xl-7 col-sm-7 row form-group">
+        <%= @employee.status %>
+      </div>
+    </div>
+  </div>
+  <center>
+  <div class="tBotton">
+    <%= link_to edit_employee_path(@employee) do%><div class="functionality_add btn btn-primary">Chỉnh sửa</div><% end %>
+  </div>
+</center>
+  <%= link_to employees_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %> -->
+<center>
+  <div class="show_container">
   <div class="show_content tColumn">
   <p class="tRow">
-    <strong class="show_employee_name">Họ tên</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.name %>
+    <span class="show_employee_name">Họ tên</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= @employee.name %></strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Loại</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.employee_type %>
+    <span class="show_employee_name">Loại</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value">
+      <% if @employee.employee_type == 0 %>
+        <span>Quản lý</span>
+    <% elsif @employee.employee_type == 1 %>
+        <span>Lễ tân</span>
+    <% elsif @employee.employee_type == 2 %>
+        <span>Vệ sinh</span>
+    <% elsif @employee.employee_type == 3 %>
+        <span>Bảo vệ</span>
+    <% end %>
+      </strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Giới tính</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.gender %>
+    <span class="show_employee_name">Giới tính</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value">
+      <% if @employee.gender == 0 %>
+        <span>Nam</span>
+      <% elsif @employee.gender == 1 %>
+          <span>Nữ</span>
+      <% elsif employee.gender == 2 %>
+          <span>Khác</span>
+      <% end %>
+    </strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Số điện thoại</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.phone_number %>
+    <span class="show_employee_name">Số điện thoại</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= @employee.phone_number %></strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Địa chỉ</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.address %>
+    <span class="show_employee_name">Địa chỉ</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= @employee.address %></strong>
   </p>
 
   <p class="tRow">
-    <strong  class="show_employee_name">Email</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.email %>
+    <span  class="show_employee_name">Email</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= @employee.email %></strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Ngày sinh</strong>
-    <strong class="show_sign">:</strong>
-    <%= Date.parse(@employee.date_of_birth.to_s) %>
+    <span class="show_employee_name">Ngày sinh</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= Date.parse(@employee.date_of_birth.to_s) %></strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Thành Phố</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.citizen_id %>
+    <span class="show_employee_name">CCCD</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= @employee.citizen_id %></strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Quốc tịch</strong>
-    <strong class="show_sign">:</strong>
-    <%= @employee.nationality %>
+    <span class="show_employee_name">Quốc tịch</span>
+    <span class="show_sign">:</span>
+    <strong class="show_employee_value"><%= @employee.nationality %></strong>
   </p>
 
   <p class="tRow">
-    <strong class="show_employee_name">Status</strong>
-    <strong class="show_sign">:</strong>
-    <input type="checkbox" id="switch" name="isWorking" value="1" class="employee_status_checkbox" checked /><label class="label-status" for="switch">Toggle</label>
+    <span class="show_employee_name">Status</span>
+    <span class="show_sign">:</span>
+    <span class="show_employee_value">
+      <% if @employee.status == 0 %>
+        <span class="badge rounded-pill bg-primary employee_status_doing">Đang làm</span>
+      <% elsif @employee.status == 1 %>
+          <span class="badge rounded-pill bg-danger employee_status_off">Nghỉ việc</span>
+      <% end %>
+    </span>
   </p>
   </div>
 
-  <div class="bottom_container">
-    <%= link_to employees_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
+  <div class="tBotton">
     <%= link_to edit_employee_path(@employee) do%><div class="functionality_add btn btn-primary">Chỉnh sửa</div><% end %>
   </div>
 </div>
 </center>
+<%= link_to employees_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
 
 
 
