--- a/app/views/room_prices/edit.html.erb
+++ b/app/views/room_prices/edit.html.erb
@@ -1,6 +1,22 @@
-<h1>Editing Room Price</h1>
+<div class="employee_top_breadcrumb">
+    <nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <div class="row">
+        <div class="col-sm-6">
+            <div class="d-flex justify-content-start">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Cấu hình</a></li>
+                <li class="breadcrumb-item"><a href="#">Giá phòng</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Chỉnh sửa</li>
+            </ol>
+            </div>
+        </div>
+        </div>
+    </nav>
+</div>
 
 <%= render 'form', room_price: @room_price %>
 
-<%= link_to 'Show', @room_price %> |
-<%= link_to 'Back', room_prices_path %>
+<div class="bottom_container">
+    <%= link_to room_prices_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
+    <%= link_to @room_price do%><div class="functionality_add btn btn-primary">Xem</div><% end %>
+</div>
