--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -1,11 +1,11 @@
 <%= stylesheet_link_tag 'cooperate_reservation' %>
 
-<% if reservation.errors.any? %>
+<% if @payment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(reservation.errors.count, "error") %> prohibited this reservation from being saved:</h2>
+      <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this reservation from being saved:</h2>
 
       <ul>
-        <% reservation.errors.each do |error| %>
+        <% @payment.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -20,7 +20,7 @@
   </div>
 
 
-<%= form_with url: "/cooperate_reservation/new", method: :post do |form| %>
+<%= form_with url: "/cooperate_reservation/new", method: :post do |p| %>
   <div class="action">
     <div id="prev_button" class="btn btn-primary">
       Back
@@ -28,28 +28,24 @@
     <div id="next_button" class="btn btn-primary" style="float: right">
       Next
     </div>
-    <%= form.submit "Finish", class:"btn btn-primary", id:"finish_button"  ,style:"float: right"%>
+    <%= p.submit "Finish", class:"btn btn-primary", id:"finish_button"  ,style:"float: right"%>
 
   </div>
 
   <div class="bs-stepper">
   <div class="bs-stepper-content">
     <br>
-      <%= form.hidden_field(:employee_id, :value => current_user.employee_id)  %>
-      <%= form.hidden_field(:arrival_date, :value => @arrival_date)  %>
-      <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
-      <%= form.hidden_field(:room_id, :value => @chosen_rooms[0]["id"])  %>
-      <%= form.hidden_field(:status, :value => 1) %>
-      <%= form.fields_for :payment_attributes, Payment.new do |p| %>
-        <%= p.fields_for :client_attributes, Client.new do |client| %>
-          <div id="step1">
-            <%= render :partial => "step1",  :locals=>{:client=>client, :form=>form} %>
-          </div>
-        <% end %>
-        <div id="step2">
-          <%= render :partial => "step2",  :locals=>{:p=>p, :form=>form} %>
-        </div>
+    <%= p.fields_for :client_attributes, Client.new do |client| %>
+      <div id="step1">
+        <%= render :partial => "step1",  :locals=>{:client=>client} %>
+      </div>
     <% end %>
+
+
+
+      <div id="step2">
+        <%= render :partial => "step2",  :locals=>{:p=>p} %>
+      </div>
   </div>
   <div id="choosen_rooms">
 
