--- a/app/views/cooperate_reservation/_step2.html.erb
+++ b/app/views/cooperate_reservation/_step2.html.erb
@@ -4,16 +4,36 @@
 <div class="row">
   <div class="col-lg">
     <% if @chosen_rooms %>
-
       <% @chosen_rooms.each do |r| %>
         <div class="card border-0 ">
           <div class="card-body padding-bottom-20 ">
+
             <% room_type = Room.where(:name => r["id"]).pluck(:room_type_id).to_s %>
             <% room_type = room_type.tr('[]', '') %>
             <% room_type_name = RoomType.find(room_type).name %>
             <% room_price = @room_prices["#{room_type_name}"] %>
             <p><b><%= r["id"] %> - <%= room_type_name %> - <%= room_price %></b></p>
             <p><%= @arrival_date %>- <%= @leave_date %></p>
+            <%= p.fields_for :reservation_attributes, Reservation.new do |form| %>
+              <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
+              <%= form.number_field :adults, in: 0 .. 20 ,class:"form-control " %>
+
+              <% room_name = r["id"] %>
+              <% room_id = room_id = Room.where(name: r["id"]).pluck(:id) %>
+              <% room_id = room_id.to_s %>
+              <% room_id = room_id.tr('[]', '') %>
+
+              <%= form.hidden_field(:room_id, :value => room_id)  %>
+              <%= form.hidden_field(:employee_id, :value => current_user.employee_id)  %>
+              <%= form.hidden_field(:arrival_date, :value => @arrival_date)  %>
+              <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
+              <%= form.hidden_field(:room_id, :value => @chosen_rooms[0]["id"])  %>
+              <%= form.hidden_field(:status, :value => 1) %>
+
+
+              <%= form.hidden_field(:client_name) %>
+              <%= form.hidden_field(:client_citizen_id) %>
+            <% end %>
             <!--              <p>2 NL - 1 TE</p>-->
           </div>
         </div>
